# mivia_rover_waypoint_follower

./: package.xml  setup.cfg  setup.py
config/: waypoint_follower.yaml
launch/: waypoint_follower.launch.py
mivia_rover_waypoint_follower/: waypoint_follower_node.py
waypoints/: example_waypoints.csv  trajectory.csv  trajectory_circular.csv  trajectory_linear.csv  trajectory_pillola_larga.csv  trajectory_pillola_stretta.csv
